  security enhancements, improvements, and bug fixes.
* Added: Latest text translations. Thank you to all our translators.
* Changed: Minimum system requirements increased to PHP 5.6 (PHP 8.2+
  recommended, preferably with vendor support).
* Changed: Minimum system requirements increased to MySQL 5.5 (MySQL 8.0+
  recommended, preferably with vendor support).

Changes in 4.9.0-beta.2 (14 Mar 2025)

* Added: Full article previews directly from the Write panel.
* Added: Site status values to 'process' attribute of <txp:hide />.
* Added: 'inline' value to 'format' attribute of <txp:css /> (thanks, jools-r).
* Added: 'target' attribute to <txp:popup />.
* Added: 'match', 'separator' attribute capability to <txp:if_yield />.
* Added: Ability to serve files via 'type' attribute to <txp:file_download />.
* Added: Plugin compilation directly from the Plugins panel.
* Changed: Refactored article Save panel (thanks jools-r, phiw13, and cara-tm).
* Changed: Wildcards in file/image/link category queries.
* Changed: Enhancements to RPC functionality (thanks, Melonking906).
* Changed: Multi-site scaffold optimisations.
* Changed: Pre-flight check visibility toggle.
* Changed: Articles may use external URLs directly.
* Changed: A few language keys renamed to avoid invalid name clashes.
* Developer: Add pre+post article_submit callbacks on article post/save.
* Developer: Add getAtts($tag) method for fetching tag attributes.
* Developer: Reintroduce extend_col_1 markup area on Write panel.
* Developer: Add lifecycle>loaded callback for plugins run from cache.
* Fixed: Pre+post textfilter callbacks were switched.
* Fixed: Plugins import Textpack strings properly.
* Fixed: Prefs (multi-)select options (UI Library).
* Vendors: DOMPurify 3.2.4.
* Vendors: jQuery UI 1.14.1.
* Vendors: PHPMailer 6.9.3.
* Vendors: PrismJS 1.30.0.
* Vendors: Textile 4.1.2. (thanks, gocom).
* Vendors: UglifyJS 3.19.3.

Changes in 4.9.0-beta.1 (12 Aug 2024)
